--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=MorseTest
 
-version=1.1.0
+version=1.0.0
 
 author=lu4ult
 
@@ -10,4 +10,4 @@ sentence=Descripcion de la libreria en negrita
 paragraph=Descripcion mas detallada
 category=Sensors
 
-url=https://github.com/lu4ult/MorseTest
+url=https://github.com/lu4ult/MorseTest.git
