--- a/library.properties
+++ b/library.properties
@@ -1,14 +1,9 @@
 name=MorseTest
-
-version=3.3.0
-
-author=lu4ult
-
-maintainer=lu4ult
-
-sentence=Descripcion de la libreria en negrita
-paragraph=Descripcion mas detallada
-category=Sensors
-
-url=https://github.com/lu4ult/MorseTest.git
+version=1.0.0
+author=Jason Milldrum <milldrum@gmail.com>
+maintainer=Jason Milldrum <milldrum@gmail.com>
+sentence=Generate Morse Code for transmission on an digital I/O pin.
+paragraph=Provide this library with a function that calls every one millisecond, and it will generate Morse code for you on the digital pin and at the sending speed that you desire.
+category=Data Processing
+url=https://github.com/etherkit/MorseArduino
 architectures=*
